--- a/frontend/src/app/node/node.component.html
+++ b/frontend/src/app/node/node.component.html
@@ -4,5 +4,7 @@
         <div>
             <h3>Temperature</h3>
         </div>
+
+        <div class="chart-container" style="position: relative; height:40vh; width:80vw"><canvas id="myChart" width="400" height="400"></canvas></div>
     </div>
 </div>
