--- a/frontend/src/app/node/node.component.html
+++ b/frontend/src/app/node/node.component.html
@@ -1,10 +1,80 @@
-<div>
-    <div><h1>{{ node.name }}</h1></div>
-    <div>
+<div class="container-fluid">
+    <div class="row"><h1>{{ node.name }}</h1></div>
+    <div class="row">
+        <form action="/node/{{ node.id }}" method="GET" class="row">
+            <div class="col-2">
+                <label for="start-date">Start Time:</label>
+                <input type="datetime-local" id="start-date" name="start-date" value="{{ getDateTimeBeforeOneDay() }}">    
+            </div>
+            <div class="col-2">
+                <label for="end-date">End Time:</label>
+                <input type="datetime-local" id="end-date" name="end-date" value="{{ getDateTimeNow() }}">
+            </div>
+            <div class="col-2">
+                <button type="submit">Filter</button>
+            </div>
+        </form>
+    </div>
+
+    <div class="row" style="margin-bottom: 150px;">
         <div>
             <h3>Temperature</h3>
         </div>
 
-        <div class="chart-container" style="position: relative; height:40vh; width:80vw"><canvas id="myChart" width="400" height="400"></canvas></div>
+        <div class="row" style="height: 400px;">
+            <div class="col-md-9 mh-100">
+                <div class="chart-container" style="position: relative"><canvas id="temperature-chart" width="400" height="400"></canvas></div>
+            </div>
+            <div class="col-md-3 mh-100">
+                <div class="mh-100">
+                    <table class="table table-hover" style="overflow: auto; position:relative; height: 200px">
+                        <thead>
+                            <th scope="col">#</th>
+                            <th scope="col">Value</th>
+                            <th scope="col">Date</th>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let temperature of temperatureValues; let i = index" [attr.data-index]="i">
+                                <td>{{ i + 1 }}</td>
+                                <td>{{ temperature.value }}</td>
+                                <td>{{ temperature.updatedAt }}</td>
+                            </tr>
+                        </tbody>
+                    </table>    
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="row">
+        <div>
+            <h3>Humidity</h3>
+        </div>
+
+        <div class="row">
+            <div class="col-9">
+                <div class="chart-container" style="position: relative"><canvas id="humidity-chart" width="400" height="400"></canvas></div>
+            </div>
+            <div class="col-3">
+                <div class="row">
+                    <table class="table table-hover" style="overflow-y: scroll;">
+                        <thead>
+                            <th scope="col">#</th>
+                            <th scope="col">Value</th>
+                            <th scope="col">Date</th>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let temperature of temperatureValues; let i = index" [attr.data-index]="i">
+                                <td>{{ i + 1 }}</td>
+                                <td>{{ temperature.value }}</td>
+                                <td>{{ temperature.updatedAt }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+    
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
