--- a/frontend/src/app/node/node.component.html
+++ b/frontend/src/app/node/node.component.html
@@ -21,43 +21,13 @@
             <h3>Temperature</h3>
         </div>
 
-        <div class="row" style="height: 400px;">
-            <div class="col-md-9 mh-100">
-                <div class="chart-container" style="position: relative"><canvas id="temperature-chart" width="400" height="400"></canvas></div>
-            </div>
-            <div class="col-md-3 mh-100">
-                <div class="mh-100">
-                    <table class="table table-hover" style="overflow: auto; position:relative; height: 200px">
-                        <thead>
-                            <th scope="col">#</th>
-                            <th scope="col">Value</th>
-                            <th scope="col">Date</th>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let temperature of temperatureValues; let i = index" [attr.data-index]="i">
-                                <td>{{ i + 1 }}</td>
-                                <td>{{ temperature.value }}</td>
-                                <td>{{ temperature.updatedAt }}</td>
-                            </tr>
-                        </tbody>
-                    </table>    
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <div class="row">
-        <div>
-            <h3>Humidity</h3>
-        </div>
-
         <div class="row">
-            <div class="col-9">
-                <div class="chart-container" style="position: relative"><canvas id="humidity-chart" width="400" height="400"></canvas></div>
+            <div class="col-md-9">
+                <div class="chart-container" style="position: relative"><canvas id="temperature-chart" width="400" height="{{ height}}"></canvas></div>
             </div>
-            <div class="col-3">
-                <div class="row">
-                    <table class="table table-hover" style="overflow-y: scroll;">
+            <div class="col-md-3">
+                <div style="overflow-y: scroll;" id="temperature-table">
+                    <table class="table table-hover">
                         <thead>
                             <th scope="col">#</th>
                             <th scope="col">Value</th>
@@ -71,10 +41,42 @@
                             </tr>
                         </tbody>
                     </table>
-    
                 </div>
             </div>
         </div>
 
     </div>
+
+
+    <div class="row" style="margin-bottom: 150px;">
+        <div>
+            <h3>Humidity</h3>
+        </div>
+
+        <div class="row">
+            <div class="col-md-9">
+                <div class="chart-container" style="position: relative"><canvas id="humidity-chart" width="400" height="{{ height}}"></canvas></div>
+            </div>
+            <div class="col-md-3">
+                <div style="overflow-y: scroll;" id="humidity-table">
+                    <table class="table table-hover">
+                        <thead>
+                            <th scope="col">#</th>
+                            <th scope="col">Value</th>
+                            <th scope="col">Date</th>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let humidity of humidityValues; let i = index" [attr.data-index]="i">
+                                <td>{{ i + 1 }}</td>
+                                <td>{{ humidity.value }}</td>
+                                <td>{{ humidity.updatedAt }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 </div>
