--- a/frontend/src/app/node-edit/node-edit.component.html
+++ b/frontend/src/app/node-edit/node-edit.component.html
@@ -1,30 +1,19 @@
 <div class="container" style="margin-top: 2em;">
     <div class="col-6 border border-3 rounded">
         <div style="margin: 1em;">
+            <div class="mb-3">
+                <label for="id">Node Id</label>
+                <input type="text" readonly class="form-control-plaintext" name="id" value="{{ node.id }}">
+            </div>
             <form #nodeForm="ngForm" (ngSubmit)="updateNode()">
-                <div class="mb-3">
-                    <label for="id">Node Id</label>
-                    <input type="text" readonly class="form-control-plaintext" name="id" value="{{ node.id }}" [(ngModel)]="node.id">
-                </div>
                 <div class="mb-3">
                     <label for="name">Node Name</label>
                     <input type="text" class="form-control" required #name="ngModel" name="name" value="{{ node.name }}" [(ngModel)]="node.name">
                 </div>
                 <div class="mb-3">
-                    <label for="alert">Temperature Alert Type</label>
-                    <select name="alert" class="form-select">
-                        <option value="none" selected>None</option>
-                        <option value="cow">Cow</option>
-                        <option value="sheep">Sheep</option>
-                        <option value="deer">Deer</option>
-                        <option value="horse">Horse</option>
-                        <option value="pig">Pig</option>
-                    </select>
-                </div>
-                <div class="mb-3">
                     <div class="d-flex">
                         <div class="float-end" style="margin-left: 1em;">
-                            <button type="reset" class="btn btn-danger"> Cancel</button>
+                            <button type="button" (click)="resetForm()" class="btn btn-danger"> Cancel</button>
                         </div>
                         <div class="float-end" style="margin-left: 1em;">
                             <button type="submit" class="btn btn-success"> Edit</button>
