Temperature And Humidity Alert Are Added

--- a/frontend/src/app/index/index.component.html
+++ b/frontend/src/app/index/index.component.html
@@ -5,14 +5,14 @@
                 <thead>
                     <th scope="col">Node Id</th>
                     <th scope="col">Node Name</th>
-                    <th scope="col"></th>
+                    <!-- <th scope="col"></th> -->
                     <th scope="col"></th>
                 </thead>
                 <tbody>
                     <tr *ngFor="let node of nodes" class="pe-auto" style="cursor: pointer;">
                         <td scope="row" class="align-middle" [routerLink]="['/node/', node.id]">{{ node.id }}</td>
                         <td class="align-middle" [routerLink]="['/node/', node.id]">{{ node.name}}</td>
-                        <td><a href="/node-alert/{{ node.id }}" class="btn btn-success">Add Alert</a></td>
+                        <!-- <td><a href="/node-alert/{{ node.id }}" class="btn btn-success">Add Alert</a></td> -->
                         <td><a href="/node/{{ node.id }}/edit" class="btn btn-warning">Edit</a></td>
                     </tr>
                 </tbody>
