--- a/frontend/src/app/node/node.component.css
+++ b/frontend/src/app/node/node.component.css
@@ -1,7 +1,11 @@
 .bottom-line {
-    border-bottom-width: 2px;
-    border-bottom-style: dotted;
-    border-bottom-color: black;
+  border-bottom-width: 2px;
+  border-bottom-style: dotted;
+  border-bottom-color: black;
 
-    margin-bottom: 2em;
+  margin-bottom: 2em;
+}
+
+#map {
+  height: 400px;
 }
